<package>
  <name>pr2_props</name>
  <version>1.0.5</version>
  <description>pr2_props is a package designed to be the first step towards replacing your real (or imaginary) friends with a robot. Robot gives you mad props yo.</description>

  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/pr2_props</url>
  <!-- <url type="bugtracker"></url> -->


  <author>Joe Romano</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>pr2_gripper_sensor_action</build_depend>
  <build_depend>pr2_gripper_sensor_controller</build_depend>
  <build_depend>pr2_gripper_sensor_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>pr2_gripper_sensor_action</run_depend>
  <run_depend>pr2_gripper_sensor_controller</run_depend>
  <run_depend>pr2_gripper_sensor_msgs</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>actionlib</test_depend> -->
  <!-- <test_depend>pr2_gripper_sensor_action</test_depend> -->
  <!-- <test_depend>pr2_gripper_sensor_controller</test_depend> -->
  <!-- <test_depend>pr2_gripper_sensor_msgs</test_depend> -->

</package>

